Adding PATCH method for update partially a note
